# ips-sampler

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: ips_config.json
docs/: index.html  ips_generator.html  search.js
docs/ips_generator/: builder.html  cli.html  generator.html
generators/: ips_generator.py
resources/graphics/: ips-sampler.mmd
src/: cli.py
src/ips_gen/: builder.py
src/ips_generator/: __init__.py  builder.py  cli.py  generator.py  renderer.py
src/ips_sampler/: builder.py  cli.py
tests/: test_generator.py
