[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ips-sampler"
version = "0.1.0"
description = "Synthetic International Patient Summary (IPS) Generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]

[project.scripts]
ips-sampler = "ips_sampler.cli:main"

[tool.setuptools.package-data]
ips_sampler = ["py.typed"]
