[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ips-generator"
description = "Synthetic International Patient Summary (IPS) Generator"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pdoc"
]

[project.scripts]
ips-generator = "ips_generator.cli:main"

[tool.setuptools.package-data]
ips_generator = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "ips_generator.__version__"}

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
